Pequenos ajustes criação da impressao de zip arrumando gitinore